# itmo-OpenCL-2020

./: .gitignore  CMakeLists.txt  README.md
matrix-multiplication/: CMakeLists.txt  main.c  matrix_mul.cl
prefix-sum/: CMakeLists.txt  main.c  prefix_sum.cl
